--- a/scripts/install
+++ b/scripts/install
@@ -54,7 +54,7 @@ cd $TRIPLEO_ROOT/diskimage-builder/
 bin/disk-image-create -u base -a i386 -o $TRIPLEO_ROOT/incubator/base
 
 cd $TRIPLEO_ROOT/tripleo-image-elements/elements/boot-stack
-sed -i "s/\"virtual_power_user\": \"stack\",/\"virtual_power_user\": \"`whoami`\",/" config.json
+sed -i "s/\"user\": \"stack\",/\"user\": \"`whoami`\",/" config.json
 
 cd $TRIPLEO_ROOT/incubator/
 scripts/boot-elements boot-stack -o bootstrap
