--- a/scripts/install
+++ b/scripts/install
@@ -7,31 +7,31 @@
 set -e
 
 # test for existing ssh public key
-KEY_LOCATION=~/.ssh
-declare -a POSSIBLE_KEY_FILES=('id_rsa.pub' 'id_dsa.pub');
+SSH_KEY_LOCATION=~/.ssh
+declare -a POSSIBLE_SSH_KEY_FILES=('id_rsa.pub' 'id_dsa.pub');
 set +e
-for key_file in "${POSSIBLE_KEY_FILES[@]}"
+for key_file in "${POSSIBLE_SSH_KEY_FILES[@]}"
 do
-  file "$KEY_LOCATION/$key_file" | grep "public key"
+  file "$SSH_KEY_LOCATION/$key_file" | grep "public key"
   if [ "$?" == "0" ]; then
-    KEY_FILE="$KEY_LOCATION/$key_file"
+    SSH_KEY_FILE="$SSH_KEY_LOCATION/$key_file"
     break
   fi
 done
 set -e
-if [ -z "$KEY_FILE" ]; then
+if [ -z "$SSH_KEY_FILE" ]; then
     echo "There is no public key for ssh access. Please create one and run again."
     exit
 fi
 
-
+# creates tripleo root directory
 export TRIPLEO_ROOT=~/tripleo
 
 if [ ! -d "$TRIPLEO_ROOT" ]; then
   mkdir $TRIPLEO_ROOT
 fi
 
-# make cloning inteligent (when git repo exists => pull)
+# inteligently clone repos (when git repo exists => pull)
 declare -a GITHUB_REPOS=('tripleo/incubator' 'tripleo/bm_poseur' 'stackforge/diskimage-builder' 'stackforge/tripleo-image-elements');
 for repo in "${GITHUB_REPOS[@]}"
 do
@@ -54,6 +54,7 @@ do
   fi
 done
 
+# installs dependencies on host
 cd $TRIPLEO_ROOT/incubator
 scripts/install-dependencies
 
@@ -67,6 +68,7 @@ if [ "$?" != "0" ]; then
 fi
 set -e
 
+# creates bridge for network with baremetal nodes
 cd $TRIPLEO_ROOT/bm_poseur/
 sudo ./bm_poseur --bridge-ip=none create-bridge
 
@@ -91,7 +93,8 @@ scp root@$BOOTSTRAP_IP:stackrc ~/stackrc
 sed -i "s/localhost/$BOOTSTRAP_IP/" ~/stackrc
 source ~/stackrc
 
-nova keypair-add --pub-key ~/.ssh/id_rsa.pub default
+#nova keypair-add --pub-key ~/.ssh/id_rsa.pub default
+nova keypair-add --pub-key $SSH_KEY_FILE default
 
 nova baremetal-node-create ubuntu 1 512 10 $MAC
 
